Fixed setting of auth method